--- a/LayoutTests/fast/dom/shadow/host-pseudo-class.html
+++ b/LayoutTests/fast/dom/shadow/host-pseudo-class.html
@@ -127,13 +127,13 @@ backgroundColorShouldBe('host', 'rgb(0, 128, 0)');
 
 cleanUp();
 
-debug(':host with :ancestor in a shadow tree should match its shadow host.');
+debug(':host with :host-context in a shadow tree should match its shadow host.');
 
 sandbox.appendChild(
     createDOM('div', {'id': 'host', 'class': 'foobar'},
         createShadowRoot(
             createDOM('style', {},
-               document.createTextNode(':host(:ancestor(body.mytheme)) { background-color: green; }')),
+               document.createTextNode(':host(:host-context(body.mytheme)) { background-color: green; }')),
             createDOM('div', {},
                 document.createTextNode('Hello')))));
 
