Remove multiple GC calls and replace GCController.collect calls with GCController.collectAll
BUG=307614,288072
NOTRY=true

Review URL: https://codereview.chromium.org/211933008

git-svn-id: svn://svn.chromium.org/blink/trunk@170018 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/forms/dangling-form-element-crash.html
+++ b/LayoutTests/fast/forms/dangling-form-element-crash.html
@@ -7,7 +7,7 @@
 
     function gc() {
         if (window.GCController)
-            return GCController.collect();
+            return GCController.collectAll();
         for (var i = 0; i < 10000; ++i)
             var s = new String("foo");
     }
