Revert of Remove prefixed Shadow DOM APIs in Element. (https://codereview.chromium.org/208503004/)
Reason for revert:
Breaks many browser tests: http://build.chromium.org/p/chromium.webkit/builders/Linux%20Tests/builds/35489

Original issue's description:
> Remove prefixed Shadow DOM APIs in Element.
> 
> It's time to remove. We've shipped unprefixed APIs for these APIs.
> 
> BUG=336121
> 
> Committed: https://src.chromium.org/viewvc/blink?view=rev&revision=170008

TBR=dglazkov@chromium.org,esprehn@chromium.org,hayato@chromium.org
NOTREECHECKS=true
NOTRY=true
BUG=336121

Review URL: https://codereview.chromium.org/212303005

git-svn-id: svn://svn.chromium.org/blink/trunk@170036 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/dom/shadow/reinsert-insertion-point.html
+++ b/LayoutTests/fast/dom/shadow/reinsert-insertion-point.html
@@ -6,7 +6,7 @@
 
 <script>
 var inside = document.getElementById('inside');
-var insideRoot = inside.createShadowRoot();
+var insideRoot = inside.webkitCreateShadowRoot();
 
 var content = insideRoot.appendChild(document.createElement('content'));
 
@@ -17,3 +17,4 @@ insideRoot.appendChild(content);
 
 shouldBeTrue("inside.offsetHeight > 0");
 </script>
+
