--- a/LayoutTests/fast/dom/shadow/reattach-content-ancestor.html
+++ b/LayoutTests/fast/dom/shadow/reattach-content-ancestor.html
@@ -4,7 +4,7 @@
 
 <script>
     var host = document.getElementById('host');
-    var root = host.createShadowRoot();
+    var root = host.webkitCreateShadowRoot();
     root.innerHTML = "<div style='display: none'><content></content></div>";
     document.body.offsetTop;
     root.firstElementChild.style.display = 'block';
