--- a/LayoutTests/fast/dom/shadow/shadowdom-for-input-spellcheck.html
+++ b/LayoutTests/fast/dom/shadow/shadowdom-for-input-spellcheck.html
@@ -4,6 +4,7 @@ if (window.testRunner)
     testRunner.dumpAsText();
 if (window.internals)
     internals.settings.setUnifiedTextCheckerEnabled(true);
+Element.prototype.createShadowRoot = Element.prototype.webkitCreateShadowRoot || Element.prototype.createShadowRoot;
 onload = function() {
     var myShadowRoot = document.getElementById('sample').createShadowRoot();
     var myShadowElement = document.createElement('defs');
