--- a/LayoutTests/fast/dom/shadow/stale-distribution-after-shadow-removal.html
+++ b/LayoutTests/fast/dom/shadow/stale-distribution-after-shadow-removal.html
@@ -10,8 +10,8 @@
         testRunner.dumpAsText();
 
     var host = document.getElementById('host');
-    var oldestShadowRoot = host.createShadowRoot();
-    var youngestShadowRoot = host.createShadowRoot();
+    var oldestShadowRoot = host.webkitCreateShadowRoot();
+    var youngestShadowRoot = host.webkitCreateShadowRoot();
 
     oldestShadowRoot.innerHTML = '';
     youngestShadowRoot.innerHTML = '<shadow></shadow>';
