--- a/LayoutTests/fast/layers/crash-shadowdom-scrollbar-no-scrollable-area.html
+++ b/LayoutTests/fast/layers/crash-shadowdom-scrollbar-no-scrollable-area.html
@@ -26,7 +26,7 @@ function boom() {
     document.documentElement.appendChild(header);
 
     document.body.offsetTop;
-    var shadow = document.createElement('div').createShadowRoot();
+    var shadow = document.createElement('div').webkitCreateShadowRoot();
     shadow.appendChild(tfoot);
 }
 window.onload = boom;
