--- a/LayoutTests/http/tests/inspector-enabled/shadow-dom-rules.html
+++ b/LayoutTests/http/tests/inspector-enabled/shadow-dom-rules.html
@@ -9,7 +9,7 @@ function createShadowRoot()
     if (window.testRunner)
         testRunner.waitUntilDone();
     var template = document.querySelector('#tmpl');
-    var root = document.querySelector('#host').createShadowRoot();
+    var root = document.querySelector('#host').webkitCreateShadowRoot();
     root.appendChild(template.content.cloneNode(true));
     if (window.testRunner)
         testRunner.showWebInspector();
