--- a/LayoutTests/inspector/elements/breadcrumb-shadow-roots.html
+++ b/LayoutTests/inspector/elements/breadcrumb-shadow-roots.html
@@ -8,7 +8,7 @@
 function loaded()
 {
     var template = document.querySelector("#tmpl");
-    var root = document.querySelector("#host").createShadowRoot();
+    var root = document.querySelector("#host").webkitCreateShadowRoot();
     root.appendChild(template.content.cloneNode(true));
     runTest();
 }
