--- a/LayoutTests/inspector/elements/styles/shadow-dom-rules.html
+++ b/LayoutTests/inspector/elements/styles/shadow-dom-rules.html
@@ -7,7 +7,7 @@
 function createShadowRoot()
 {
     var template = document.querySelector('#tmpl');
-    var root = document.querySelector('#host').createShadowRoot();
+    var root = document.querySelector('#host').webkitCreateShadowRoot();
     root.appendChild(template.content.cloneNode(true));
 }
 
