--- a/PerformanceTests/ShadowDOM/DistributionWithMultipleShadowRoots.html
+++ b/PerformanceTests/ShadowDOM/DistributionWithMultipleShadowRoots.html
@@ -28,7 +28,7 @@ function setup()
         var shadow = document.createElement('shadow');
         var content = document.createElement('content');
         shadow.appendChild(content);
-        var shadowRoot = host.createShadowRoot();
+        var shadowRoot = host.webkitCreateShadowRoot();
         shadowRoot.appendChild(shadow);
     }
 }
