--- a/PerformanceTests/ShadowDOM/LargeDistributionWithoutLayout.html
+++ b/PerformanceTests/ShadowDOM/LargeDistributionWithoutLayout.html
@@ -24,7 +24,7 @@ function setup()
     }
 
     window.content = document.createElement('content');
-    var shadowRoot = host.createShadowRoot();
+    var shadowRoot = host.webkitCreateShadowRoot();
     shadowRoot.appendChild(content);
 }
 
