--- a/LayoutTests/inspector/profiler/heap-snapshot-summary-expansion-preserved-when-sorting.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-summary-expansion-preserved-when-sorting.html
@@ -24,7 +24,7 @@ function test()
 
             function step2()
             {
-                var row = InspectorTest.findRow("object", "B");
+                var row = InspectorTest.findRow("B");
                 InspectorTest.assertEquals(true, !!row, "\"B\" row");
                 InspectorTest.expandRow(row, expandB);
                 function expandB()
@@ -44,7 +44,7 @@ function test()
 
             function step4()
             {
-                var row = InspectorTest.findRow("object", "B");
+                var row = InspectorTest.findRow("B");
                 InspectorTest.assertEquals(true, !!row, "\"B\" row");
                 var bInstanceRow = row.children[0];
                 InspectorTest.assertEquals(true, !!bInstanceRow, "\"B\" instance row");
@@ -53,9 +53,9 @@ function test()
                 {
                     function propertyMatcher(data)
                     {
-                        return data.name === "a" && data.value.charAt(0) === "A";
+                        return data._referenceName === "a" && data._name.charAt(0) === "A";
                     }
-                    var aRow = InspectorTest.findRow("object", propertyMatcher, row);
+                    var aRow = InspectorTest.findMatchingRow(propertyMatcher, row);
                     InspectorTest.assertEquals(true, !!aRow, "\"a: A\" row");
                     InspectorTest.expandRow(aRow, step5);
                 }
