--- a/LayoutTests/inspector/profiler/heap-snapshot-summary-show-next.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-summary-show-next.html
@@ -24,7 +24,7 @@ function test()
 
             function step2()
             {
-                var row = InspectorTest.findRow("object", "A");
+                var row = InspectorTest.findRow("A");
                 InspectorTest.assertEquals(true, !!row, "\"A\" row");
                 InspectorTest.expandRow(row, step3);
             }
