--- a/LayoutTests/inspector/profiler/heap-snapshot-summary-sorting-fields.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-summary-sorting-fields.html
@@ -29,7 +29,7 @@ function test()
 
             function step1a()
             {
-                var row = InspectorTest.findRow("object", "Window");
+                var row = InspectorTest.findRow("Window");
                 InspectorTest.assertEquals(true, !!row, "\"Window\" class row");
                 InspectorTest.expandRow(row, step1b);
             }
@@ -63,7 +63,7 @@ function test()
             {
                 columns[currentColumn] = newColumnState;
                 var columnName = columns[currentColumn].identifier;
-                var contents = windowRow.children.map(function(obj) { return JSON.stringify(obj.data[columnName]); });
+                var contents = windowRow.children.map(function(obj) { return obj.element.children[currentColumn].textContent; });
                 InspectorTest.assertEquals(instanceCount, contents.length, "column contents");
                 var sortTypes = { object: "text", distance: "number", count: "number", shallowSize: "size", retainedSize: "size" };
                 InspectorTest.assertEquals(true, !!sortTypes[columns[currentColumn].identifier], "sort by identifier");
