--- a/LayoutTests/inspector/profiler/heap-snapshot-summary-sorting-instances.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-summary-sorting-instances.html
@@ -28,7 +28,7 @@ function test()
 
             function step1a()
             {
-                var row = InspectorTest.findRow("object", "B");
+                var row = InspectorTest.findRow("B");
                 InspectorTest.assertEquals(true, !!row, "\"B\" row");
                 InspectorTest.expandRow(row, step2);
             }
@@ -55,9 +55,9 @@ function test()
             {
                 columns[currentColumn] = newColumnState;
                 var columnName = columns[currentColumn].identifier;
-                var row = InspectorTest.findRow("object", "B");
+                var row = InspectorTest.findRow("B");
                 InspectorTest.assertEquals(true, !!row, "\"B\" row");
-                var contents = row.children.map(function(obj) { return JSON.stringify(obj.data[columnName]); });
+                var contents = row.children.map(function(obj) { return obj.element.children[currentColumn].textContent; });
                 InspectorTest.assertEquals(instanceCount, contents.length, "column contents");
                 var sortTypes = { object: "text", distance: "number", count: "number", shallowSize: "size", retainedSize: "size" };
                 InspectorTest.assertEquals(true, !!sortTypes[columns[currentColumn].identifier], "sort by identifier");
