Web MIDI API renaming: the last step of three step changes
Remove old functions. Now there are no 'SysEx' and 'sysEx' strings
in Web MIDI implementation after this change.

Here are a series of changes on this renaming. 
1. https://codereview.chromium.org/208243014/
2. https://codereview.chromium.org/210003002/
3. this change

BUG=349538
TEST=LayoutTests/webmidi

Review URL: https://codereview.chromium.org/208423016

git-svn-id: svn://svn.chromium.org/blink/trunk@170062 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/webmidi/permission.html
+++ b/LayoutTests/webmidi/permission.html
@@ -8,10 +8,6 @@
 
 description("Test if sysex permission request is handled.");
 
-// FIXME: remove following workaround once testRunner in Chromium has a new interface.
-if (!testRunner.setMIDISysexPermission)
-    testRunner.setMIDISysexPermission = testRunner.setMIDISysExPermission;
-
 shouldBeDefined("testRunner.setMIDISysexPermission");
 shouldBeDefined("navigator.requestMIDIAccess");
 
@@ -22,7 +18,7 @@ var finishSuccessfully = function () {
     finishJSTest();
 }
 
-var rejectSysEx = function (next) {
+var rejectSysex = function (next) {
     testRunner.setMIDISysexPermission(false);
     promise = navigator.requestMIDIAccess({sysex: true});
     shouldBeDefined("promise");
@@ -39,7 +35,7 @@ var rejectSysEx = function (next) {
     });
 }
 
-var acceptSysEx = function (next) {
+var acceptSysex = function (next) {
     testRunner.setMIDISysexPermission(true);
     promise = navigator.requestMIDIAccess({sysex: true});
     shouldBeDefined("promise");
@@ -60,7 +56,7 @@ var acceptSysEx = function (next) {
     });
 }
 
-rejectSysEx(acceptSysEx);
+rejectSysex(acceptSysex);
 
 </script>
 </body>
